Upgrade Java runtime from version 17 to version 21 LTS